# FahrplanDatenGarten

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  demo.json  flake.nix  form1.json  formulardemo.json  manage.py  pyproject.toml  requirements.txt
FGRFiller/: apps.py  urls.py  utils.py  views.py
FGRFiller/templates/: form.html
FahrplanDatenGarten/: env.cfg.example  manage.py  settings.py  urls.py
FahrplanDatenGarten/DBApis/: hafasClient.py  hafasImport.py  tasks.py
FahrplanDatenGarten/FGRFiller/: urls.py  utils.py  views.py
FahrplanDatenGarten/FahrplanDatenGarten/: celery.py  schema.py  settings.py  urls.py  wsgi.py
FahrplanDatenGarten/core/: admin.py  models.py  schema.py  views.py
FahrplanDatenGarten/details/: apps.py  urls.py  views.py
FahrplanDatenGarten/gtfs/: urls.py  views.py
FahrplanDatenGarten/static/: fgrfiller.css  fgrfiller.js  script.js
FahrplanDatenGarten/templates/: base.html  header.html
FahrplanDatenGarten/verspaeti/: apps.py  tasks.py  urls.py  views.py
FahrplanDatenGarten/wagenreihung/: admin.py  istWrClient.py  models.py  tasks.py
ansible/: .vault-pass.asc  ansible.cfg  hosts  vault-gpg-wrapper.sh
ansible/group_vars/: all.yml  fdg.yml  worker.yml
ansible/playbooks/: site.yml
backend/: .env.example  requirements.txt
core/: admin.py  models.py
fahrplandatengarten/: env.cfg  env.cfg.example
frontend/: index.html  main.html  script.js  style.css  style.css.map  style.sass
gtfs/: apps.py  urls.py  views.py
static/: script.js  style.css  style.css.map  style.sass
verspaeti/: urls.py  views.py
(+249 files in other folders)
